[tool.poetry]
name = "repl_python3_Document-Automation"
version = "0.1.0"
description = ""
authors = ["YouweiZhang <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
docx = "^0.2.4"
pyautogui = "^0.9.52"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
